log/build_2024-04-22_14-20-14/joy_control/stderr.log
  File "/home/beachlbl/porter/ros2-ws-2024/install/joy_control/lib/python3.10/site-packages/joy_control/joy_ex_pub.py", line 21
    self.cb_r_publisher_ = self.create_publisher(UInt8, 'cb_dt_right', 10
                                                ^
SyntaxError: '(' was never closed

